# valheimbot

./: pyproject.toml
DiscordEconomyBot/: Notes  chat.py  steamid.py  steamid_connections.txt  steamids.txt
src/DiscordEconomyBot/: bot.py  chat.txt  vlog.py
